365Hosts merger information

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1032,6 +1032,22 @@ section.lazy-placeholder:after {
 .cid-sllozbbeje .dropdown-item:hover {
   color: #d2ff24 !important;
 }
+.cid-sBhdYR2NEL {
+  background-color: #232323;
+}
+.cid-sBhdYR2NEL P {
+  color: #767676;
+}
+.cid-sBhdYR2NEL H1 {
+  color: #ffffff;
+}
+.cid-sBhdYR2NEL .mbr-text,
+.cid-sBhdYR2NEL .mbr-section-btn {
+  color: #ffffff;
+}
+.cid-sBhdYR2NEL H3 {
+  color: #ffffff;
+}
 .cid-sqUAkoxhHQ .modal-body .close {
   background: #1b1b1b;
 }
