Update 365Hosts info

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1519,6 +1519,22 @@ section.lazy-placeholder:after {
 .cid-sqdiFAFmX0 .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-sBu8dasjIX {
+  padding-top: 90px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-sBu8dasjIX P {
+  color: #767676;
+}
+.cid-sBu8dasjIX H1 {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-sBu8dasjIX H3 {
+  color: #ffffff;
+  text-align: center;
+}
 .cid-slfYvJ5L6a {
   padding-top: 90px;
   padding-bottom: 75px;
@@ -2313,6 +2329,22 @@ section.lazy-placeholder:after {
 }
 .cid-sqdiFAFmX0 .media-container-row .row-copirayt p {
   width: 100%;
+}
+.cid-sBu68YuE0E {
+  padding-top: 90px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-sBu68YuE0E P {
+  color: #767676;
+}
+.cid-sBu68YuE0E H1 {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-sBu68YuE0E H3 {
+  color: #ffffff;
+  text-align: center;
 }
 .cid-slfHg385Iq {
   padding-top: 90px;
@@ -3887,6 +3919,22 @@ section.lazy-placeholder:after {
 }
 .cid-sqdiFAFmX0 .media-container-row .row-copirayt p {
   width: 100%;
+}
+.cid-sBu8U2piYY {
+  padding-top: 90px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-sBu8U2piYY P {
+  color: #767676;
+}
+.cid-sBu8U2piYY H1 {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-sBu8U2piYY H3 {
+  color: #ffffff;
+  text-align: center;
 }
 .cid-slgfrTSRyJ {
   padding-top: 90px;
@@ -13445,6 +13493,22 @@ section.lazy-placeholder:after {
 .cid-sllozbbeje .dropdown-item:hover {
   color: #d2ff24 !important;
 }
+.cid-sBu8KbdRfh {
+  padding-top: 90px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-sBu8KbdRfh P {
+  color: #767676;
+}
+.cid-sBu8KbdRfh H1 {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-sBu8KbdRfh H3 {
+  color: #ffffff;
+  text-align: center;
+}
 .cid-spPQg4bJS7 {
   background-image: url("../../../assets/images/ehylsnavgwgvizl4mw5am-1920x1080.jpg");
 }
@@ -15203,6 +15267,22 @@ section.lazy-placeholder:after {
 }
 .cid-sqdiFAFmX0 .media-container-row .row-copirayt p {
   width: 100%;
+}
+.cid-sBu7YbJlkT {
+  padding-top: 90px;
+  padding-bottom: 0px;
+  background-color: #232323;
+}
+.cid-sBu7YbJlkT P {
+  color: #767676;
+}
+.cid-sBu7YbJlkT H1 {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-sBu7YbJlkT H3 {
+  color: #ffffff;
+  text-align: center;
 }
 .cid-stSY4cQoif {
   background-image: url("../../../assets/images/minecraft-2053882-1281-1280x678.jpg");
