--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1032,6 +1032,108 @@ section.lazy-placeholder:after {
 .cid-sllozbbeje .dropdown-item:hover {
   color: #d2ff24 !important;
 }
+.cid-sBxmCfhGTw {
+  padding-top: 120px;
+  padding-bottom: 0px;
+  background: #232323;
+}
+.cid-sBxmCfhGTw .images-container.container-fluid {
+  padding: 0;
+}
+.cid-sBxmCfhGTw .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+  -webkit-align-items: stretch;
+  width: 100% !important;
+}
+.cid-sBxmCfhGTw .media-container-row .img-item {
+  display: -webkit-flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: center;
+}
+.cid-sBxmCfhGTw .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
+}
+.cid-sBxmCfhGTw .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-sBxmCfhGTw .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-sBxmCfhGTw .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-sBxmCfhGTw .img-item {
+    width: 100% !important;
+  }
+  .cid-sBxmCfhGTw .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+    -webkit-flex-basis: initial !important;
+  }
+}
+.cid-sBxnqLljvn {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background: #232323;
+}
+.cid-sBxnqLljvn .images-container.container-fluid {
+  padding: 0;
+}
+.cid-sBxnqLljvn .media-container-row {
+  margin: 0 auto;
+  align-items: stretch;
+  -webkit-align-items: stretch;
+  width: 100% !important;
+}
+.cid-sBxnqLljvn .media-container-row .img-item {
+  display: -webkit-flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  z-index: 1;
+  -webkit-flex-direction: column;
+  -webkit-justify-content: center;
+}
+.cid-sBxnqLljvn .media-container-row .img-item img {
+  width: 100%;
+  min-height: 1px;
+}
+.cid-sBxnqLljvn .media-container-row .img-item .img-caption {
+  background: #ffffff;
+  z-index: 2;
+  padding: 1rem 1rem;
+  word-break: break-word;
+}
+.cid-sBxnqLljvn .media-container-row .img-item .img-caption p {
+  margin-bottom: 0;
+}
+.cid-sBxnqLljvn .media-container-row .img-item.item1 {
+  padding: 0 2rem 0 0;
+}
+@media (max-width: 992px) {
+  .cid-sBxnqLljvn .img-item {
+    width: 100% !important;
+  }
+  .cid-sBxnqLljvn .img-item.item1 {
+    width: 100%;
+    flex-basis: initial !important;
+    padding: 0 0 2rem 0 !important;
+    -webkit-flex-basis: initial !important;
+  }
+}
 .cid-sBhdYR2NEL {
   background-image: url("../../../assets/images/scene-1604442-1921-1920x1920.jpg");
 }
